Fix background color for header for dark mode

--- a/public/css/index.css
+++ b/public/css/index.css
@@ -45,7 +45,9 @@ html:active-view-transition-type(reload) {
 	--color-gray-50: #C0C0C0;
 	--color-gray-90: #333;
 
-	--background-color: #fff;
+	--background-color-rgb: 255, 255, 255;
+	--background-color: rgb(var(--background-color-rgb));
+	--background-color-slightly-transparent: rgba(var(--background-color-rgb), 0.9);
 
 	--text-color: var(--color-gray-90);
 	--text-color-link: #082840;
@@ -61,7 +63,7 @@ html:active-view-transition-type(reload) {
 		--color-gray-50: #C0C0C0;
 		--color-gray-90: #dad8d8;
 
-		--background-color: #15202b;
+		--background-color-rgb: 21, 32, 43;
 
 		/* --text-color is assigned to --color-gray-_ above */
 		--text-color-link: #1493fb;
@@ -134,7 +136,7 @@ html {
 header {
 	top: 0px;
 	position: sticky;
-	background: rgba(255, 255, 255, 0.9);
+	background: var(--background-color-slightly-transparent);
 }
 
 /* https://www.a11yproject.com/posts/how-to-hide-content/ */
